kubernetes/platform/base/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  gatewayClassName: gke-l7-regional-external-managed
  addresses:
  - type: NamedAddress
    value: gateway-external-ip
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.konnektr.io"
    - name: argocd-https
      protocol: HTTPS
      hostname: argocd.konnektr.io
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-tls
    - name: oauth-https
      protocol: HTTPS
      port: 443
      hostname: oauth.konnektr.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: oauth-tls
    - name: ktrlplane-https
      protocol: HTTPS
      port: 443
      hostname: ktrlplane.konnektr.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ktrlplane-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: platform
spec:
  parentRefs:
  - name: external
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
